--- a/PVZ_back/Makefile
+++ b/PVZ_back/Makefile
@@ -25,3 +25,5 @@ game:
 	g++ -I $(SDL2_include) -L $(SDL2_lib)  *.cpp -o pvz main.res $(flags) & pvz.exe
 SDL2:
 	g++ -I $(SDL2_include) -L $(SDL2_lib)  main.cpp $(cpps) -o main main.res $(flags) & main
+run:
+	./pvz.exe
