--- a/PVZ_back/Makefile
+++ b/PVZ_back/Makefile
@@ -21,9 +21,9 @@ flags = \
 	-lSDL2_mixer
 
 game:
-	g++ -I $(SDL2_include) -L $(SDL2_lib)  *.cpp -o pvz main.res $(flags) -mwindows & pvz.exe
+	g++ -I $(SDL2_include) -L $(SDL2_lib)  src\*.cpp -o pvz main.res $(flags) -mwindows & pvz.exe
 debug:
-	g++ -I $(SDL2_include) -L $(SDL2_lib)  *.cpp -o pvz main.res $(flags) & pvz.exe
+	g++ -I $(SDL2_include) -L $(SDL2_lib)  src\*.cpp -o pvz main.res $(flags) & pvz.exe
 SDL2:
 	g++ -std=c++11 -I $(SDL2_include) -L $(SDL2_lib)  main.cpp $(cpps) -o main main.res $(flags) & main
 run:
