upgrade makefile. add levels. level 8: night

--- a/PVZ_back/Makefile
+++ b/PVZ_back/Makefile
@@ -1,30 +1,70 @@
-#SDL2-----------------------------------------------------------------------------
+SHELL := pwsh.exe
+
+TARGET = pvz
+
 SDL2_path = D:\Game_programming\SDL2
-SDL2_include = $(SDL2_path)\include\SDL2
-SDL2_lib = $(SDL2_path)\lib
 
-cpps = \
-	LTexture.cpp \
-	peashooter.cpp \
-	init.cpp \
-	background.cpp \
-	LTimer.cpp \
-	icon.cpp \
-	bullets.cpp
+CC = g++
+CFLAGS = -std=c++17 -Wall -pedantic -MMD -MP 
 
-flags = \
-	-lmingw32 \
-	-lSDL2main \
-	-lSDL2 \
-	-lSDL2_image \
-	-lSDL2_ttf \
-	-lSDL2_mixer
+OUTDIR = .
+DATADIR = ./data
+SUBDIR = semihost stream arg_parser
+ICONDIR = ./main.res
+DIR_OBJ = ./obj
+DIR_SRC = ./obj
 
-game:
-	g++ -I $(SDL2_include) -L $(SDL2_lib)  src\*.cpp -o pvz main.res $(flags) -mwindows & pvz.exe
-debug:
-	g++ -I $(SDL2_include) -L $(SDL2_lib)  src\*.cpp -o pvz main.res $(flags) & pvz.exe
-SDL2:
-	g++ -std=c++11 -I $(SDL2_include) -L $(SDL2_lib)  main.cpp $(cpps) -o main main.res $(flags) & main
-run:
-	./pvz.exe
+
+rwildcard=$(foreach d,$(wildcard $(1:=/*)),$(call rwildcard,$d,$2) $(filter $(subst *,%,$2),$d))
+
+INCS = 
+SRC = $(call rwildcard,src,*.cpp)
+#NODIR_SRC = $(notdir $(SRC))
+OBJS = $(addprefix $(DIR_OBJ)/, $(SRC:cpp=o)) # obj/xxx.o obj/folder/xxx .o
+INC_DIRS = -Isrc -I$(SDL2_path)\include\SDL2
+
+LIBS = 
+LIB_DIRS = 
+#* SDL flags
+LIB_DIRS += -L$(SDL2_path)\lib
+LIBS     += -lmingw32 -lSDL2main -lSDL2 -lSDL2_image -lSDL2_ttf -lSDL2_mixer -mwindows
+
+
+.PHONY: all 
+all: compile run
+
+.PHONY: compile
+compile: $(TARGET) 
+
+
+.PHONY: $(TARGET)
+$(TARGET): $(OBJS)
+	$(CC) -o $(OUTDIR)/$@ $(OBJS) $(ICONDIR) $(LIB_DIRS) $(LIBS)
+
+DEPS=$(OBJS:.o=.d)
+-include $(DEPS)
+
+$(DIR_OBJ)/%.o: %.cpp 
+	powershell mkdir -Force $(subst /,\,$(@D))
+	$(CC) -o $@ $(CFLAGS) -c $< $(INC_DIRS)
+	@echo "$(patsubst %.o,%.d,$@)"
+
+
+
+.PHONY: clean
+clean:
+	powershell rm -r -Force $(subst /,\,$(DIR_OBJ))\src
+
+.PHONY: echo
+echo:
+	@echo "INC files: $(INCS)"
+	@echo "SRC files: $(SRC)"
+	@echo "OBJ files: $(OBJS)"
+	@echo "LIB files: $(LIBS)"
+	@echo "INC DIR: $(INC_DIRS)"
+	@echo "LIB DIR: $(LIB_DIRS)"
+	@echo "DEP files: $(DEPS)"
+
+.PHONY: run
+run: 
+	$(OUTDIR)/$(TARGET)
